add get day by name
