# src/routes/days.js
@@ -8,6 +8,9 @@ routes.get('/', daysController.getAllDays);
 //retrieves one day by ID
 routes.get('/:id', daysController.getOneDay);
 
+//retrieves one day by name
+routes.get('/day/:name', daysController.getOneDaybyName);
+
 //updates one day by ID
 routes.put('/:id', validation.saveDay, daysController.updateDay);
 
